--- a/03webpack/src/css/style.less
+++ b/03webpack/src/css/style.less
@@ -1,12 +1,6 @@
-.box1{
-    width: 100px;
-    height: 100px;
-    background: green;
-}
-
 @width: 300px;
 @height: @width + 10px;
-@yellow:yellow;
+@yellow:pink;
 
 #header {
   width: @width;
