--- a/04webpack/src/css/style.css
+++ b/04webpack/src/css/style.css
@@ -20,7 +20,7 @@ body {
 
 @keyframes myfirst {
     from {
-        background: red;
+        background: pink;
     }
     to {
         background: yellow;
